tilføjer lidt tekst

--- a/instruction.html
+++ b/instruction.html
@@ -15,17 +15,21 @@
     <header>
       <nav>
         <div id="logotype-wrapper">
-          <a href="index.html"> LOGOTYPE </a>
+          <a href="index.html"> HEARTBREAK HOTLINE </a>
         </div>
         <ul class="menu">
-          <li><a class="menuItem" href="instruction.html">Nærkontakt </a></li>
-          <li><a class="menuItem" href="register.html">Indberet</a></li>
+          <li>
+            <a class="menuItem" href="instruction.html"><strong> Hjertesorg 101 </strong></a>
+          </li>
+          <li>
+            <a class="menuItem" href="register.html"><strong> Del din Story! </strong> </a>
+          </li>
         </ul>
       </nav>
     </header>
 
     <main>
-      <h1>INSTRUKTION</h1>
+      <h1>HJERTESORG 101 - Din Overlevelsesguide</h1>
       <section class="info-graphic">
         <?xml version="1.0" encoding="UTF-8"?>
         <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="700px" height="900px" viewBox="0 0 595.28 841.89">
