--- a/register.html
+++ b/register.html
@@ -16,11 +16,15 @@
     <header>
       <nav>
         <div id="logotype-wrapper">
-          <a href="index.html"> LOGOTYPE </a>
+          <a href="index.html"> HEARTBREAK HOTLINE </a>
         </div>
         <ul class="menu">
-          <li><a class="menuItem" href="instruction.html">Nærkontakt </a></li>
-          <li><a class="menuItem" href="register.html">Indberet</a></li>
+          <li>
+            <a class="menuItem" href="instruction.html"><strong> Hjertesorg 101 </strong></a>
+          </li>
+          <li>
+            <a class="menuItem" href="register.html"><strong> Del din Story! </strong></a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -29,8 +33,8 @@
       <h1>INDBERET</h1>
       <section id="form-section">
         <article id="form-info">
-          <h2>Overskrift</h2>
-          <p>Tekst</p>
+          <h2>Skriv det ud. Del din historie.</h2>
+          <p>Nogle gange er første skridt mod healing at sætte ord på kaosset. Vi lytter – uden dom, uden afbrydelser. Bare et sted, hvor du kan give slip.</p>
         </article>
         <form id="webform"></form>
       </section>
