--- a/instruction.html
+++ b/instruction.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/infographic.css" />
     <link rel="icon" type="image/png" href="img/fav.png" />
-    <title>Emergency Site</title>
+    <title>Hjertesorg 101</title>
   </head>
   <body id="instruction">
     <header>
       <nav>
         <div id="logotype-wrapper">
-          <a href="index.html"> HEARTBREAK HOTLINE </a>
+          <a href="index.html"> HEARTBREAK HOTLINE💔🚨</a>
         </div>
         <ul class="menu">
           <li>
