laver fade-in og out + mere

--- a/instruction.html
+++ b/instruction.html
@@ -155,15 +155,15 @@
             d="M209.47,288.55c-11.71,14.68-15.92,25.53-15.32,32.34.77,8.72-.42,24.53,10.74,25.8,13.78,1.56,42.73-14.31,51.52-25.72,8.89-11.55,10.69-20.37,21.14-26.63,7.32-4.39,9.63-3.49,10.26-5.53,1.62-5.27-40.74-34.86-60.64-22.44-7.67,4.78-4.76,5.97-17.7,22.19Z"
             style="fill: #7c485c; opacity: 0.41"
           />
-          <circle id="headCircle" cx="90" cy="150" r="40" style="fill: #d989b5" />
-          <circle id="shoulderCircle" cx="520" cy="500" r="40" style="fill: #ae8fd9" />
-          <circle id="kneeCircle" cx="100" cy="620" r="40" style="fill: #acd7f2" />
+          <circle id="headCircle" cx="90" cy="150" r="35" style="fill: #d989b5" />
+          <circle id="shoulderCircle" cx="520" cy="500" r="35" style="fill: #ae8fd9" />
+          <circle id="kneeCircle" cx="100" cy="620" r="35" style="fill: #acd7f2" />
         </svg>
       </section>
       <section class="info-text">
-        <h2>Overskrift</h2>
+        <h2>Hjertesorg 101 – Din Overlevelsesguide</h2>
         <article>
-          <p class="placeholder">INFO-TEKST</p>
+          <p class="placeholder">Velkommen til dit breakup bootcamp! Hjertesorg er som en skadestue for sjælen, og vi har samlet de vigtigste førstehjælpstips til dig. Følg med – og husk, du overlever dette.</p>
         </article>
         <aside id="efficiency" class="info-box yellow hide">INFO-BOX</aside>
         <aside id="requirement" class="info-box green hide">INFO-BOX</aside>
