linker news-cards til siderne

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="daily_text">
             <h2>HJERTESORG 101</h2>
             <p>Græder du i sengen? Lytter du til den samme triste sang på repeat? Vi har din ryg. Trin-for-trin vejledning til at overleve de første 24 timer efter et breakup.</p>
-            <a href="" class="cta_btn">Se mere</a>
+            <a href="instruction.html" class="cta_btn">Se mere</a>
           </div>
         </article>
         <article class="daily_card">
@@ -52,7 +52,7 @@
           <div class="daily_text">
             <h2>Har du brug for at få det ud?</h2>
             <p>Dit hjerte er knust, og tankerne kører i ring. Du har gennemspillet samtalerne tusind gange, men intet giver mening. Smerten føles uendelig – men du behøver ikke bære den alene.</p>
-            <a href="" class="cta_btn"> Fortæl din historie her</a>
+            <a href="register.html" class="cta_btn"> Fortæl din historie her</a>
           </div>
         </article>
       </section>
