tilføjer lidt indhold

--- a/index.html
+++ b/index.html
@@ -58,22 +58,22 @@
       </section>
       <section id="breaking">
         <article class="news_card">
-          <h3>Kærlighedssorg er en reel smerte</h3>
-          <p>Forskning viser, at heartbreak påvirker kroppen som fysisk smerte. Få vores bedste råd til at komme gennem smerten – en dag ad gangen.</p>
+          <h3>Førstehjælp til hjertesorg</h3>
+          <p>De første 24 timer er kritiske. Her får du din akutte overlevelsesguide – fra "slet ikke kontakte dem" til "hvilken is der virker bedst mod panikgråd"..</p>
           <img src="" alt="news_img" />
           <a class="cta_btn" href="">Læs mere</a>
         </article>
         <article class="news_card">
           <h3>FØLELSESMÆSSIG STRØMSVIGT!</h3>
-          <p>Advarsel: Hjernen er i chok, kroppen er på autopilot, og tårerne vil ikke stoppe. Hvad gør du? Vi guider dig gennem det første chok lige her.</p>
+          <p>Advarsel: Hjernen er i chok, kroppen er på autopilot, og tårerne vil ikke stoppe. Hvad gør du? Her er din plan, når både krop og sjæl crasher i heartbreak-mode.</p>
           <img src="" alt="news_img" />
           <a class="cta_btn" href="">Læs mere</a>
         </article>
         <article class="news_card">
-          <h3>Når du har brug for at snakke – vi lytter</h3>
-          <p>Vores hotline er åben 24/7 for dig, der har brug for at blive hørt.</p>
+          <h3>Din hjerne efter et break-up vs. en junkie i afvænning"</h3>
+          <p>Videnskaben bakker dig op: Det er ikke bare dig – hjertesorg påvirker hjernen som et hardcore stofmisbrug. Her er hvorfor det føles så vanvittigt.</p>
           <img src="" alt="news_img" />
-          <a class="cta_btn" href="">Ring nu</a>
+          <a class="cta_btn" href="">Se mere her</a>
         </article>
       </section>
     </main>
