--- a/register.html
+++ b/register.html
@@ -115,8 +115,15 @@
       <section id="form-summary">
         <h2>Summary</h2>
         <article>
-          <h3>Navn</h3>
-          <p class="placeholder">.</p>
+          <h3>Vi lytter!</h3>
+          <br />
+          <p class="placeholder">
+            Hos Heartbreak Hotline er vi her for at lytte, støtte og hjælpe dig gennem svære tider. Vi ved, at livet kan være udfordrende, og at det nogle gange er svært at finde nogen at tale med.<br />
+            Derfor har vi skabt en nem og anonym webformular, hvor du kan dele dine tanker og følelser i dit eget tempo. Uanset om du oplever hjertesorg, problemer i relationer eller blot har brug for nogen at tale med, er vi her for at høre dig.
+            Vores webformular er designet til at give dig plads til at udtrykke dig uden forstyrrelser. Du kan skrive alt, hvad der fylder, og vi lover at lytte uden at dømme. Når du udfylder formularen, kan du være sikker på, at dine ord bliver
+            behandlet med respekt og forståelse. Det er første skridt mod at få hjælp – og vi er klar til at være din støtte. Vi ved, at det kan være svært at tage det første skridt og åbne op. Men vi ønsker at skabe et rum, hvor du føler dig tryg
+            ved at dele det, der ligger på dit hjerte. Husk, at vi er her for dig, og du er ikke alene.
+          </p>
         </article>
       </section>
     </main>
